fix blob visibility

--- a/assets/scss/components/_about-section.scss
+++ b/assets/scss/components/_about-section.scss
@@ -1,5 +1,5 @@
 .about {
-  overflow: hidden;
+  overflow: visible;
   &_content {
     display: flex;
     align-items: center;
