--- a/assets/scss/components/_service-section.scss
+++ b/assets/scss/components/_service-section.scss
@@ -1,6 +1,6 @@
 .service {
   position: relative;
-  overflow: hidden;
+  overflow: visible;
   padding-bottom: 275px;
   &__background {
     position: absolute;
